# kaggle-google-agent-course-capstone

./: .gitignore  DOCKER.md  Dockerfile  GEMINI.md  Makefile  README.md  _quarto.yml  capstone-info.md  capstone-writeup.md  docker-compose.yml  ideas.md  main.py  pyproject.toml  start.sh  submission-info.md
.github/: dependabot.yml
.github/workflows/: ruff.yml
.streamlit/: config.toml
craft_agent/: agent.py
craft_agents/: agent.py
domain-agent/: agent.py
ideas/: testmodelssql.py  testpostdb.py
notebooks/: database-mvp.py  qa-team-mvp.py  research-team-mvp.py
notebooks/__marimo__/session/: qa-team-mvp.py.json  research-team-mvp.py.json
scratch_pad/: agent.py
src/craft_research_team/: agent.py
src/quality_assurance_team/: agent.py
src/toddle_ops/: app.py  cli.py  config.py  helpers.py  main.py  ui.py
src/toddle_ops/agents/: __init__.py  archetypes.py
src/toddle_ops/agents/craft_research_team/: agent.py
src/toddle_ops/app/: agent.py  main.py
src/toddle_ops/config/: basic.py
src/toddle_ops/craft_research_team/: agent.py
src/toddle_ops/helpers/: __init__.py  agent_factory.py  run.py
src/toddle_ops/mcp/: sqlite.py
src/toddle_ops/models/: __init__.py  actions.py  agents.py  databaseactions.py  enums.py  projects.py  reports.py
src/toddle_ops/quality_assurance_team/: agent.py
src/toddle_ops/root_agent/: agent.py
src/toddle_ops/services/: callbacks.py  sessions.py
tests/: __init__.py  test_agent_factory.py
tests/agents/: __init__.py  test_agent_getters.py  test_factory.py
tests/models/: test_projects.py
(+13 files in other folders)
