[project]
name = "kaggle-google-agent-course-capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "google-adk>=1.19.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "sodapy>=2.2.0",
]
