[project]
name = "toddle-ops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "asenetcky", email = "me@asenetcky.dev" }
]
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "google-adk>=1.19.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
toddle-ops = "toddle_ops:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "marimo>=0.18.0",
]
